Fix cropped QR codes - Fixes #420

--- a/resources/js/assets/app.scss
+++ b/resources/js/assets/app.scss
@@ -195,6 +195,15 @@ a:hover {
   background-color: $grey-darker !important;
 }
 
+img.qrcode {
+  max-width: 320px;
+}
+@media screen and (max-height: 500px) {
+  img.qrcode {
+    max-height: 50vh;
+  }
+}
+
 .tfa-grid {
   border-radius: 6px;
   text-align: center;
